--- a/angular.json
+++ b/angular.json
@@ -76,6 +76,10 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "browserTarget": "someapp:build",
+            "ssl": false
+          },
           "configurations": {
             "production": {
               "browserTarget": "xplore-helper:build:production"
